fixed for CHLK-3977 Teacher > Grades. Flags in an item are overlapped with the dropdown "All categories"

--- a/Chalkable.Web/assets/sass2/4_pages/_grading-grid.sass
+++ b/Chalkable.Web/assets/sass2/4_pages/_grading-grid.sass
@@ -217,7 +217,7 @@
     z-index: -10
 
     &.incomplete, &.late, &.absent, &.multiple, &.error
-      z-index: 10
+      z-index: 4
 
   .dotted-h
     position: relative
